# flare

./: Cargo.toml  README.md  example-set
src/: args.rs  guess.rs  main.rs  reveal.rs  set.rs  stats.rs
